<?xml version="1.0"?>
<package>
  <name>neo_conveyor_belt_worker</name>
  <version>0.0.0</version>
  <description>The neo_dauer_test_node package</description>

  <maintainer email="nieland@neobotix.de">Neobotix</maintainer>
  <license>BSD</license>
  <url type="website">http://www.neobotix-robots.com</url>
  <author>Jan-Niklas Nieland</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
